# Sutradhara-Orchestrator

./: .dockerignore  .env.docker.example  .gitignore  DEVELOPER.md  Dockerfile.dev  README.md  docker-compose.yml
docker/: dependencies.repos  ros_entrypoint.sh
scripts/: bringup_two_uav_stack.sh  test_two_uav_mission.sh
scripts/docker/: build_images.sh  dev_shell.sh  run_sim_demo.sh  run_sim_vnc.sh  run_tests.sh
src/inspection_sim/: CMakeLists.txt  README.md  package.xml
src/inspection_sim/config/: assets.yaml  routes.yaml  sectors.yaml
src/inspection_sim/launch/: inspection_multi_robot_demo.launch.py  inspection_uav_demo.launch.py  solar_farm_world.launch.py
src/inspection_sim/models/battery_container/: model.config  model.sdf
src/inspection_sim/models/fence_segment/: model.config  model.sdf
src/inspection_sim/models/inspection_rover/: model.config  model.sdf
src/inspection_sim/models/inverter_pad/: model.config  model.sdf
src/inspection_sim/models/solar_panel_row/: model.config  model.sdf
src/inspection_sim/models/weather_station/: model.config  model.sdf
src/inspection_sim/worlds/: solar_farm_world.sdf
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/include/robot_control/: mission_control_node.hpp  sector_route_registry.hpp
src/robot_control/src/: ground_robot_manager.cpp  mission_control_main.cpp  mission_control_node.cpp  sector_route_registry.cpp  uav_manager.cpp
src/robot_control/test/: test_mission_control.cpp
src/robot_control_interfaces/: CMakeLists.txt  package.xml
src/robot_control_interfaces/msg/: CapabilityProfile.msg  RobotState.msg  TaskAck.msg  TaskCommand.msg  TaskConstraints.msg  TaskSpec.msg  TaskSuccessCriteria.msg  TaskTarget.msg  TaskUpdate.msg
src/sutradhara_orchestrator/: HighLevelFlow.md  debug_flow.py  debug_planner.py  implementation_plan.md  pyproject.toml  replay_tool.py
src/sutradhara_orchestrator/sutradhara_orchestrator/: README.md  cli.py  config.yaml  implementation_plan.md  ros_node.py  walkthrough.md
src/sutradhara_orchestrator/sutradhara_orchestrator/messages/: capability_profile.py  mission_input.py  robot_state.py  task_ack.py  task_command.py  task_update.py
src/sutradhara_orchestrator/sutradhara_orchestrator/models/: mission.py  robot.py  task.py
src/sutradhara_orchestrator/sutradhara_orchestrator/orchestrator/: agentic_ai.py  audit_logger.py  resource_allocator.py  sector_catalog.py  task_planner.py  token_budget.py  world_state_manager.py
src/sutradhara_orchestrator/sutradhara_orchestrator/pubsub/: broker.py  test.py
src/sutradhara_orchestrator/sutradhara_orchestrator/simulation/: robot.py
src/sutradhara_orchestrator/sutradhara_orchestrator/skills/: loader.py
src/sutradhara_orchestrator/sutradhara_orchestrator/skills/anomaly-triage/: SKILL.md
src/sutradhara_orchestrator/sutradhara_orchestrator/skills/emergency-response/: SKILL.md
src/sutradhara_orchestrator/sutradhara_orchestrator/skills/inspection/: SKILL.md
src/sutradhara_orchestrator/sutradhara_orchestrator/skills/patrol/: SKILL.md
src/sutradhara_orchestrator/sutradhara_orchestrator/utils/: config_manager.py
src/sutradhara_orchestrator/tests/: test_broker.py  test_end_to_end.py  test_ros_node.py  test_self_healing.py  test_skill_loader.py  test_task_planner.py  test_token_budget.py  test_world_state_manager.py
