[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sutradhara_orchestrator"
version = "0.1.0"
description = "A modular agentic orchestration stack for multi-robot coordination"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "click>=8.3.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "ipython>=8.38.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sutradhara_orchestrator*"]
